[package]
name = "example-store-handlers"
version = "0.1.0"
description = "Example Tauri app using Zuri"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zuri = { path = "../../../../packages/zuri" }

[features]
custom-protocol = ["tauri/custom-protocol"]
